segunda pre entrega de js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-    <h1>Tienda de Discos</h1>
-    
+    <h1>Tienda Catch</h1>
+    <h2>Ecommerce de discos musicales</h2>
 
 
     <script src="./main.js"></script>
